--- a/index.html
+++ b/index.html
@@ -50,19 +50,20 @@
     <h2>Featured Collections</h2>
     <div class="cards">
         <div class="card">
-            <img src="images/dining.jpg" alt="Denim Jeans" style="width:100%">
+            <img class=cardimage src="images/dining.jpg" alt="Denim Jeans" style="width:100%">
             <p class="description">Popular vintage and exclusive timber dining range that will fit into any home.</p>
-            <p><button>Shop Dining</button></p>
+            <p class="featuredbutton"><button>Shop Dining</button></p>
         </div>
         <div class="card">
-            <img src="images/couch.jpg" alt="Denim Jeans" style="width:100%">
+            <img class=cardimage src="images/couch.jpg" alt="Denim Jeans" style="width:100%">
             <p class="description">Comforting Italian leather lounge sets, perfect for your creative space</p>
-            <p><button>Shop Lounges</button></p>
+            <p class="featuredbutton"><button>Shop Lounges</button></p>
         </div>
         <div class="card">
             <img src="images/coffee.jpg" alt="Denim Jeans" style="width:100%">
             <p class="description">Space and storage efficient coffee tables built to last.</p>
-            <p><button>Shop Tables</button></p>
+            <p> </p>
+            <p class="featuredbutton"><button>Shop Tables</button></p>
         </div>
     </div>
 
