--- a/cart.html
+++ b/cart.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" href="./styles/cart.css">
 </head>
 <body>
     <div class="notice">
@@ -57,6 +58,16 @@
         <hr class="search-underline">
 
     </div>
+    <main>
+        <div><img class="cart-bg" src="/images/cart-bg.jpg" alt=""></div>
+        <span class="cart-card">
+            <div class="cart-title">
+                <h1 style="">Cart</h1>
+                
+            </div>
+        
+       </span>
+    </main>
     <footer>
         <section class="footer">
             <hr class="divider-1">
