--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <ul>
                 <li><button onclick="toggleSearch()"><img src="/images/ico_menu-search.svg" alt=""></button></li>
                 <li><a href=""><img src="/images/ico_menu-account.svg" alt=""></a></li>
-                <li><a href=""><img src="/images/ico_menu-cart.svg"alt=""></a></li>
+                <li><a href="cart.html"><img src="/images/ico_menu-cart.svg"alt=""></a></li>
                 <div class="menuhover">
                     <span onclick="openNav()">
                         <ai><a >MENU<alt=""></a></li> 
