--- a/catalogue.html
+++ b/catalogue.html
@@ -146,7 +146,7 @@
                         </div>
                     </div>
                     <div class="cat-button">
-                        <a href="catalogue.html" class="cat-add">ADD TO CART</a>
+                        <a href="cart.html" class="cat-add">ADD TO CART</a>
                     </div>
                 </div>
             </div>
