--- a/product.html
+++ b/product.html
@@ -125,7 +125,7 @@
                     </div>
                 </div>
                 <div class="product-button">
-                    <a href="#" class="product-add">ADD TO CART</a>
+                    <a href="cart.html" class="product-add">ADD TO CART</a>
                 </div>
             </div>
         
