--- a/cart.html
+++ b/cart.html
@@ -68,7 +68,7 @@
         </div>
         <span class="cart-card">
             <div class="cart-title">
-                <h1 style="">Cart</h1>
+                <h1 style="text-align: center;">Cart</h1>
                 
             </div>
         
