--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <div class="sidemenu">
                 <a id=menu-furniture href="catalogue.html">Furniture</a>
-                <a href="#">Homeware</a>
-                <a href="#">Lighting</a>
-                <a href="#">Mirrors</a>
-                <a href="#">Wall Decor</a>
-                <a href="#">Bags</a>
-                <a href="#">Sale</a>
-                <a href="#">About</a>
-                <a href="#">Contact Us</a>
-                <a href="#">Account</a>
+                <a href="catalogue.html">Homeware</a>
+                <a href="catalogue.html">Lighting</a>
+                <a href="catalogue.html">Mirrors</a>
+                <a href="catalogue.html">Wall Decor</a>
+                <a href="catalogue.html">Bags</a>
+                <a href="catalogue.html">Sale</a>
+                <a href="catalogue.html">About</a>
+                <a href="catalogue.html">Contact Us</a>
+                <a href="catalogue.html">Account</a>
             </div>
           </div>
         <div class="logo">
@@ -77,44 +77,40 @@
         </span>
       
     </span>
-
     <div id="cartslide" class="cartslide">
-        <h1 >Cart</h1>
-        <a href="javascript:void(0)" class="closebtn" onclick="closeCart()">&times;</a>
-        <div class="cartmenu">
 
-            <section id="cart" class="cart-wrap">
-                <table width="100%">
-                    <thead>
-                        <tr>
-                             <td>Product</td>
-                             <td></td>
-                             <td>Price</td>
-                             <td>Quantity</td>
-                             <td style="text-align: right;">Subtotal</td>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td><img src="/images/product-photograph-4.png" alt=""></td>
-                            <td>
-                                <h3 style="margin-bottom: -10px; margin-top: 0px;">Tasmania Mahogany Drawer</h3>
-                                <br>6 Drawer Timber Coffee Table.
-                                <br>Dimensions: 90cm x 70cm x 40cm
-                                <br>Colour: Timber Brown <br><br>
-                                <a class=remove href="">Remove</a>
-                            </td>
-                            <td style="font-size: 1.5em;font-weight: 400;">$459.00</td>
-                            <td>
-                                <button onclick="dec('amount')">-</button>
-                                <input name="amount" type="number" value="1">
-                                <button onclick="inc('amount')">+</button> 
-                            </td>
-                            <td style="font-size: 1.5em;font-weight: 500;">$459.00</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </section>
+        <h1 style="text-align: center;font-size: 3em;">Cart</h1>
+        <hr class="cart-divider">
+
+        <div class="cart-small-grid">
+            <div>
+                <img class=cartslide-img src="/images/product-photograph-4.png" alt="">
+                <div class="cartslide-quantity"> 
+                    <button class="quantity-button" onclick="dec('amount')">-</button>
+                    <input class="quantity-input" name="amount" type="number" value="1">
+                    <button class="quantity-button" onclick="inc('amount')">+</button> 
+                </div>
+            </div>
+            <div class="cart-small-grid-right">
+            
+                    <h3 class="h3cart" style="margin-bottom: -10px; margin-top: 0px;">Tasmania Mahogany Drawer</h3>
+                    <div class="cartslide-desc">
+                        <br>6 Drawer Timber Coffee Table.
+                        <br>Dimensions: 90cm x 70cm x 40cm
+                        <br>Colour: Timber Brown <br><br>
+                    </div>
+                    <a class=remove href="">Remove</a>
+                    <p class="subtotal" style="text-align: right;">Subtotal</p>
+                    <p class="subtotal-price" style="text-align: right; font-size: 1.5em;font-weight: 400;">$459.00</p>
+
+
+            </div>
+
+        </div>
+        <hr class="cart-divider">
+
+        <div class="cart-button">
+            <a class="cart-checkout" style="color: Black; font-weight: 600;">CHECKOUT</a>
         </div>
       </div>
 
@@ -186,5 +182,6 @@
     </footer>
 
 <script src="/scripts/navbar.js"></script>
+<script src="/scripts/cart.js"></script>
 </body>
 </html>
