--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="cart-small-grid">
             <div>
-                <img class=cartslide-img src="/images/product-photograph-4.png" alt="">
+                <a href="product.html"><img class=cartslide-img src="/images/product-photograph-4.png" alt=""></a>
                 <div class="cartslide-quantity"> 
                     <button class="quantity-button" onclick="dec('amount')">-</button>
                     <input class="quantity-input" name="amount" type="number" value="1">
@@ -110,7 +110,7 @@
         <hr class="cart-divider">
 
         <div class="cart-button">
-            <a class="cart-checkout" style="color: Black; font-weight: 600;">CHECKOUT</a>
+            <a href="checkout.html" class="cart-checkout" style="color: Black; font-weight: 600;">CHECKOUT</a>
         </div>
       </div>
 
