--- a/cart.html
+++ b/cart.html
@@ -116,7 +116,7 @@
             <div class="total-right">
                 <p class="total-price">$2754.00</p>
                 <div class="cart-button">
-                    <a href="checkout.html" class="cart-checkout">PROCEED TO CHECKOUT</a>
+                    <a href="checkout1.html" class="cart-checkout">PROCEED TO CHECKOUT</a>
                 </div>
             </div>
 
