--- a/product.html
+++ b/product.html
@@ -115,7 +115,7 @@
         <hr class="cart-divider">
 
         <div class="cart-button">
-            <a href="checkout.html" class="cart-checkout" style="color: Black; font-weight: 600;">CHECKOUT</a>
+            <a href="checkout1.html" class="cart-checkout" style="color: Black; font-weight: 600;">CHECKOUT</a>
         </div>
       </div>
     <main>
