--- a/catalogue.html
+++ b/catalogue.html
@@ -113,7 +113,7 @@
         <hr class="cart-divider">
 
         <div class="cart-button">
-            <a href="checkout.html" class="cart-checkout" style="color: Black; font-weight: 600;">CHECKOUT</a>
+            <a href="checkout1.html" class="cart-checkout" style="color: Black; font-weight: 600;">CHECKOUT</a>
         </div>
       </div>
 
@@ -230,7 +230,7 @@
                         </div>
                     </div>
                     <div class="cat-button">
-                        <a href="cart.html" class="cat-add">ADD TO CART</a>
+                        <a id=productlink2 onclick="" href="cart.html" class="cat-add">ADD TO CART</a>
                     </div>
                 </div>
             </div>
@@ -264,7 +264,7 @@
                         </div>
                     </div>
                     <div class="cat-button">
-                        <a id=cartlink onclick="" href="cart.html" class="cat-add">ADD TO CART</a>
+                        <a id=productlink3 onclick="" href="cart.html" class="cat-add">ADD TO CART</a>
                     </div>
                 </div>
             </div>
@@ -298,7 +298,7 @@
                         </div>
                     </div>
                     <div class="cat-button">
-                        <a id=cartlink onclick="" href="cart.html" class="cat-add">ADD TO CART</a>
+                        <a id=productlink4 onclick="" href="cart.html" class="cat-add">ADD TO CART</a>
                     </div>
                 </div>
             </div>
@@ -332,7 +332,7 @@
                         </div>
                     </div>
                     <div class="cat-button">
-                        <a id=cartlink onclick="" href="cart.html" class="cat-add">ADD TO CART</a>
+                        <a id=productlink5 onclick="" href="cart.html" class="cat-add">ADD TO CART</a>
                     </div>
                 </div>
             </div>
@@ -366,7 +366,7 @@
                         </div>
                     </div>
                     <div class="cat-button">
-                        <a id=cartlink onclick="" href="cart.html" class="cat-add">ADD TO CART</a>
+                        <a id=productlink6 onclick="" href="cart.html" class="cat-add">ADD TO CART</a>
                     </div>
                 </div>
             </div>
@@ -400,7 +400,7 @@
                         </div>
                     </div>
                     <div class="cat-button">
-                        <a id=cartlink onclick="" href="cart.html" class="cat-add">ADD TO CART</a>
+                        <a id=productlink7 onclick="" href="cart.html" class="cat-add">ADD TO CART</a>
                     </div>
                 </div>
             </div>
@@ -434,7 +434,7 @@
                         </div>
                     </div>
                     <div class="cat-button">
-                        <a id=cartlink onclick="" href="cart.html" class="cat-add">ADD TO CART</a>
+                        <a id=productlink8 onclick="" href="cart.html" class="cat-add">ADD TO CART</a>
                     </div>
                 </div>
             </div>
@@ -468,7 +468,7 @@
                         </div>
                     </div>
                     <div class="cat-button">
-                        <a id=cartlink onclick="" href="cart.html" class="cat-add">ADD TO CART</a>
+                        <a id=productlink9 onclick="" href="cart.html" class="cat-add">ADD TO CART</a>
                     </div>
                 </div>
             </div>
