--- a/catalogue.html
+++ b/catalogue.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./styles/catalogue.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./styles/cart.css">
+    <link rel="icon" type="image/x-icon" href="/images/icon.ico">
 
 </head>
 
@@ -80,6 +81,7 @@
         </span>
       
     </span>
+    <!-- mobile cart slider -->
     <div id="cartslide" class="cartslide">
 
         <h1 style="text-align: center;font-size: 3em;">Cart</h1>
@@ -118,6 +120,7 @@
       </div>
 
     <main>
+        <!-- refine - filters & sortby -->
         <div id=cattop-bg class="cattop-bg">
             <h1 class=table-header>Tables</h1>
             <h5 class=table-caption>Explore the Full Black Orpheus Table Range! Australian Made and Crafted From <br> Pure LVB Timber</h5>
@@ -163,7 +166,7 @@
             </div>
 
         </div>
-        
+        <!-- product cards grid -->
         <div class="product-cards">
  
             <div class="product-card">
@@ -474,6 +477,7 @@
             </div>
 
         </div>
+        <!-- page number footer element -->
 
         <div class="pagination">
             <a href="#"class="active">1</a>
