--- a/checkout2.html
+++ b/checkout2.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./styles/footer.css">
     <link rel="stylesheet" href="./styles/cart.css">
     <link rel="stylesheet" href="./styles/checkout2.css">
+    <link rel="icon" type="image/x-icon" href="/images/icon.ico">
 
 </head>
 <body>
@@ -130,7 +131,7 @@
             
               <div class="row">
                 <div class="formspan">
-                    <p class="submittedinfo1">johndoe@gmail.com<a href="checkout1.html"><span class="change">Change</span></a></p>
+                    <p id=submittedemail class="submittedinfo1">johndoe@gmail.com<a href="checkout1.html"><span class="change">Change</span></a></p>
                     <span><hr style="width: 90%;"></span>
                     <p class="submittedinfo3">4Johns Road, Tilted Towers Vic 3000, Australia<a href="checkout1.html"><span class="change">Change</span></a></p>
 
