--- a/confirmation.html
+++ b/confirmation.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="icon" type="image/x-icon" href="/images/icon.ico">
     <script src="/scripts/navbar.js"></script>
+
 
 </head>
 <body>
@@ -120,7 +122,8 @@
                 <h1 style="margin-bottom: -10px; margin-top: 70px;">Thank You!</h1>
                 <h5>Your order is complete. <br>You will be receiving a confirmation email with order details <br> shortly.</h5>
                 <a class="continue-shopping"  href="catalogue.html">Continue Shopping</a>
-                
+                <a style="text-decoration: none;"  href="index.html"><h5>Or Consider Creating an Account?</h5></a>
+
             </div>
        </span>
     </main>
