--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/footer.css">
     <link rel="stylesheet" href="./styles/cart.css">
+    <link rel="icon" type="image/x-icon" href="/images/icon.ico">
 </head>
 <body" >
     <!-- Represents content of the document -->
